--- a/about.debug.html
+++ b/about.debug.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>蜗牛个人导航</title>
+    <title>蜀道山人导航</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="蜗牛,蜗牛导航,个人导航,蜗牛个人导航,eallion,简单网址导航">
     <meta name="description" content="机会总是垂青于有准备的人" />
@@ -26,7 +26,7 @@
 <body class="wrapper">
     <header id="header">
         <div class="header">
-            <div class="title"><a href="/">蜗牛个人导航</a></div>
+            <div class="title"><a href="/">蜀道个人导航</a></div>
             <div class="about">
                 <span class="iconify" data-icon="entypo:info-with-circle"></span><a href="/about.html" target="_self" rel="noopener noreferrer">关于</a>
                 <span class="iconify" data-icon="file-icons:hugo"></span><a href="https://eallion.com" target="_blank" rel="noopener noreferrer">博客</a>
